test_files/fails/c_add_two_delayed_integers.ar
let add_delayed = \(a : int later) -> \(b : int later) ->
    delay (adv a + adv b :: never);

console <- 0 :: never; 
